feat: add embedded web app for REST server
